Resolve word wrap for code snippet code area in Safari
Fixes word wrap of code snippet code area for Safari

--- a/packages/code-snippet/style/index.css
+++ b/packages/code-snippet/style/index.css
@@ -94,6 +94,8 @@
   width: 100%;
   resize: vertical;
   white-space: pre;
+  word-wrap: normal;
+  overflow-x: scroll;
 }
 
 .elyra-expandableContainer-title {
